--- a/src/main/resources/public/cars.html
+++ b/src/main/resources/public/cars.html
@@ -14,7 +14,9 @@
     <div id="form" style="display:none">
     </div>
 </div>
-<a href="/">index</a>
+<a href="/index.html">index</a>
+<a href="/admin.html">admin.html</a>
+<a href="/cars.html">cars</a>
 </body>
 <script>
     function edit(uuid) {
