--- a/src/main/resources/public/admin.html
+++ b/src/main/resources/public/admin.html
@@ -6,22 +6,25 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cars</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div>
-
-    <table id="table"></table>
-    <button onclick="generate()">Generuj 40 testowych</button>
+<div class="menu">
     <div id="form" style="display:none">
     </div>
+    <a href="/index.html">index</a>
+    <a href="/admin.html">admin.html</a>
+    <a href="/cars.html">cars</a>
 </div>
-<a href="/index.html">index</a>
-<a href="/admin.html">admin.html</a>
-<a href="/cars.html">cars</a>
+<div class="menu-left">
+    <button onclick="generate()">Generuj 40 testowych</button>
+    <button onclick="generate()">Generuj 40 testowych</button>
+</div>
+<table id="table" class="table-right"></table>
 </body>
 <script>
     function generate(){
-        fetch("/generate").then()
+        fetch("/generate").then(refresh)
     }
     function edit(uuid) {
         const form = document.getElementById("form")
@@ -49,7 +52,9 @@
 refresh()
     }
     function refresh(){
+        console.log("123")
         const table = document.getElementById("table")
+        table.innerText=""
         fetch("/json")
             .then(r => r.json())
             .then(json => {
