--- a/src/main/resources/public/admin.html
+++ b/src/main/resources/public/admin.html
@@ -19,22 +19,27 @@
 <div class="menu-left">
     <button onclick="generate()">Generuj 40 testowych</button>
     <hr style="padding: 0"/>
+    <button onclick="allInvoiceFilter()">faktura - wszystkie auta</button>
+    <div class="flex" id="allInvoiceFiltered"></div>
+    <hr style="padding: 0"/>
     <button onclick="yearInvoiceFilter()">faktura - wszystkie auta z danego rocznika</button>
     <input type="text" id="yearInvoiceFilter">
-    <div class="flex"id="yearInvoiceFiltered"></div>
+    <div class="flex" id="yearInvoiceFiltered"></div>
     <hr style="padding: 0"/>
     <button onclick="priceInvoiceFilter()">faktura - wszystkie auta z zakresu cen</button>
     <input type="text" id="priceInvoiceFilter1">
     <input type="text" id="priceInvoiceFilter2">
+    <div class="flex" id="priceInvoiceFiltered"></div>
 </div>
 <table id="table" class="table-right"></table>
 </body>
 <script>
 
 
-    function generate(){
+    function generate() {
         fetch("/generate").then(refresh)
     }
+
     function edit(uuid) {
         const form = document.getElementById("form")
         fetch("/findOne?uuid=" + uuid)
@@ -58,13 +63,14 @@
     }
 
     window.onload = () => {
-refresh()
+        refresh()
     }
-    function refresh(){
+
+    function refresh() {
         refreshInvoicesLinks()
         console.log("123")
         const table = document.getElementById("table")
-        table.innerText=""
+        table.innerText = ""
         fetch("/json")
             .then(r => r.json())
             .then(json => {
@@ -77,7 +83,7 @@ refresh()
                         <td>${e.year}</td>
                         <td>${e.airbags.map(a => `${a.airbagType}: ${a.active}\n`)}</td>
                         <td><div style="background-color: ${e.color}; width: 15px; height: 15px"></div></td>
-                        <td>${!e.invoice?`<button onClick="fetch('/invoice?uuid=${e.uuid}').then(refresh)">generuj fakturę</button>`:`<a href="${e.invoice}">pobierz fakturę</a>`}</td>
+                        <td>${!e.invoice ? `<button onClick="fetch('/invoice?uuid=${e.uuid}').then(refresh)">generuj fakturę</button>` : `<a href="${e.invoice}">pobierz fakturę</a>`}</td>
                         <td><button onClick="edit('${e.uuid}')">Edytuj</button></td>
                         <td><a href="./upload.html?uuid=${e.uuid}">upload</a></td>
                         <td><a href="./gallery.html?uuid=${e.uuid}">gallery</a></td>
@@ -98,10 +104,11 @@ refresh()
             body[id] = el.value
         })
         console.log(body)
-        fetch("/update?uuid=" +uuid, {method: "PUT", body: JSON.stringify(body)})
+        fetch("/update?uuid=" + uuid, {method: "PUT", body: JSON.stringify(body)})
             .then(r => r.json())
             .then(json => {
                 alert(JSON.stringify(json, null, 4))
+                refresh()
             })
     }
 </script>
